# pytrader-papertrading-sdk

./: .gitignore  MANIFEST.in  Makefile  README.md  TEST_TELEMETRY.md  __init__.py  config.py  pyproject.toml  pytrader_backend_only.py  pytrader_colab_complete.py  requirements.txt
config/: __init__.py
data/: __init__.py  local_store.py  order_queue.py
docs/: advanced_strategy_guide.md  config.md  csv_backtesting.md  custom_strategy.md  paper_trading_cli.md  paper_trading_modes.md  sdk_reference.md  usage.md
examples/: __init__.py  bot2_local_demo.py  csv_backtest_example.py  custom_strategy_example.py  demo_dashboard.py  pytrader_client_example.py  run_backtest_all.py  run_paper_all.py
examples/user_data/accounts/: default.json
pytrader/: __init__.py  auth.py  client.py  config.py  indicators.py  py.typed  sdk.py  strategy.py  strategy_adapter.py  strategy_loader.py  telemetry.py  trader.py  trading_config.py
pytrader/cli/: __init__.py  paper_trading.py
pytrader/dashboard/: __init__.py  runtime.py  server.py  state.py
pytrader/dashboard/assets/: dashboard.css  dashboard.js  index.html
pytrader/data/: __init__.py  csv_provider.py  local_store.py  order_queue.py  provider.py  psx_provider.py  pypsx_service.py
pytrader/data/cache/: __init__.py  sqlite_cache.py
pytrader/trader_core/: __init__.py
pytrader/trader_core/backtesting/: __init__.py  engine.py
pytrader/trader_core/execution/: __init__.py  live_engine.py  paper_account.py  signal_queue.py  telemetry.py
pytrader/trader_core/portfolio/: __init__.py  metrics.py  service.py
pytrader/trader_core/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  testbots.py
pytrader/trader_core/utils/: __init__.py  metrics_csv.py  risk.py
pytrader/utils/: __init__.py  bot_manager.py  cleanup.py  currency.py  enums.py  exceptions.py  execution.py  logger.py  market_hours.py  time_utils.py
scripts/: dashboard_demo.py  run_all.py
tests/: test_dashboard_state.py
utils/: id_generator.py  logger.py  metrics_format.py  time_utils.py
